--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1305,7 +1305,7 @@
 
     text-align: center;
     font-size: 1.2rem;
-    line-height: 20px;
+    line-height: 22px;
     padding-top: 32px;
 }
 
@@ -1313,6 +1313,7 @@
     color: #333;
 
 }
+/* gõ lại git */
 
 
 
